2010-06-10  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Recovery/Planner.pm: fix matching on filelists - fixes
	  problems with amidxtaped: "Specified file list matches multiple
	  dumps"

2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Set dump_failed and dump_strange flags.
	* server-src/amreport.pl: Add STRANGE or MISSING to email subject.
	* installcheck/Amanda_Report.pl: Test new flags.

2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Rename 'tries' to 'dumps', it is a hash of
	  timestamps, each value is an array of try.
	* perl/Amanda/Report/human.pm: Use 'dumps'.
	* perl/Amanda/Report/postscript.pm: Use 'dumps'.
	* perl/Amanda/Report/xml.pm: Use 'dumps'.
	* contrib/amreport.rnc: Add 'dumps'
	* server-src/amreport.pl: Use 'dumps'
	* installcheck/amreport.pl: Check 'dumps'
	* installcheck/Amanda_Report.pl: Check 'dumps'

2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm (check_data_path): New method to check
	  the data_path.
	* server-src/driver.c: Check FAILED result after PORT command.
	* server-src/driverio.c: Send data_path in taper PORT-WRITE command.
	* server-src/taper.pl: Parse data_path in PORT-WRITE command, call the
	  scribe check_data_path method.
	* installcheck/taper.pl: Test it.

2010-06-09 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec: remove Provides from main section,
	   remove amanda-client from server provides section.

2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_DB_Catalog.pl, installcheck/Amanda_Logfile.pl,
	  installcheck/Amanda_Recovery_Planner.pl,
	  installcheck/Amanda_Taper_Scribe.pl, installcheck/amreport.pl,
	  installcheck/taper.pl, perl/Amanda/Report.pm,
	  perl/Amanda/Report/human.pm, perl/Amanda/Taper/Scribe.pm,
	  server-src/find.c, server-src/taper.pl: taper log a "config|error"
	  keyword in the "ERROR no-tape" line.
